Replace isPresent where possible (#2980)